2005-07-31 Bjoern Haase <bjoern.m.haase@web.de>

	* include/avr/eeprom.h: re-write of all functions
	and documentation update. EEMEM, add.
	* include/avr/iocan128.h: __EEPROM_REG_LOCATIONS__ define
	* include/avr/iom165.h, include/avr/iom169.h: Ditto.
	* include/avr/iom325.h, include/avr/iom3250.h: Ditto.
	* include/avr/iom645.h, include/avr/iom6450.h: Ditto.
	* include/avr/iomx8.h: Ditto.
	* libc/misc/Makefile.am:
	lib_a_asm_sources modify, eeprom_asm_sources add,
	lib_a_LIBADD add, lib_a_DEPENDENCIES add
	rule "%.1C1D1E.o: %.S" add, rule "%.1F2021.o: %.S" add
	* libc/misc/eeprom.S: complete re-write
	* AUTHORS: add Bjoern Haase
	* LICENSE: (Ditto.)

2005-07-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/boot.h: Implement boot_lock_fuse_bits_get()
	plus some macros for the respective address values.

2005-07-28 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/iom16.h: Add comment about ADHSM bit.
	* include/avr/iocan128.h (ADHSM): Deleted. 
	Add comment about ADHSM bit.
	* include/avr/iom128.h (ADHSM): (Ditto.)
	* include/avr/iom64.h (ADHSM): (Ditto.)
	* include/avr/iom8.h (ADHSM): (Ditto.)
	* include/avr/iom8535.h (ADHSM): (Ditto.)
	[Fixed bug #13341]

2005-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Released avr-libc-1.2.4.

2005-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/doxygen.config.in: Turn PDF hyperlinks off by default;
	the presence of this option causes the new (pdfelatex-based)
	LaTeX to turn from DVI to PDF generation.
	* doc/api/Makefile.am: Enable PDF hyperlinks for the PDF version.
	Modify the patchomania to properly include longtable (so it works
	with recent doxygen versions).

2005-07-19 Anatoly Sokolov <aesok@pautinka.net>

	* Add Anatoly Sokolov to the license file. 

2005-07-19 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/wdt.h : Add support for ATmega165, ATmega325, 
	ATmega3250, ATmega645, ATmega6450.
	[Fixed bug #13678]

2005-07-19 Anatoly Sokolov <aesok@pautinka.net>
